Update extract-pages.yml workflow to install packages before next steps

--- a/.github/workflows/extract-pages.yml
+++ b/.github/workflows/extract-pages.yml
@@ -4,6 +4,8 @@ jobs:
   extract_pages:
     runs-on: ubuntu-latest
     steps:
+      - name: Install Packages
+        run: apt-get -y install imagemagick ghostscript
       - name: Extract Page Images
         run: magick -density 300 docs/example.pdf -quality 85 docs/example-%d.jpg
       - name: Commit Change
