--- a/.github/workflows/extract-pages.yml
+++ b/.github/workflows/extract-pages.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Install Packages
-        run: apt-get -y install imagemagick ghostscript
+        run: sudo apt-get -y install imagemagick ghostscript
       - name: Extract Page Images
         run: magick -density 300 docs/example.pdf -quality 85 docs/example-%d.jpg
       - name: Commit Change
