--- a/.github/workflows/extract-pages.yml
+++ b/.github/workflows/extract-pages.yml
@@ -4,6 +4,8 @@ jobs:
   extract_pages:
     runs-on: ubuntu-latest
     steps:
+      - name: Set up Git repository
+        uses: actions/checkout@v4
       - name: Install Packages & Extract Page Images
         run: |
             sudo apt-get -y install imagemagick ghostscript
