Update call to ImageMagick in all workflows to fix occasional transparency issue

--- a/.github/workflows/extract-pages.yml
+++ b/.github/workflows/extract-pages.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Install Packages & Extract Page Images
         run: |
             sudo apt-get -y install imagemagick ghostscript
-            convert -density 300 docs/example.pdf -quality 85 docs/example-%d.jpg
+            convert -density 300 docs/example.pdf -quality 85 -alpha remove docs/example-%d.jpg
       - name: Commit Change
         run: |
             git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
